Fix composer validation error. Licence still doesn't validate.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "laravel",
         "log viewer",
         "log",
-        "logviewer",
+        "logviewer"
     ],
     "authors": [
         {
