--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "illuminate/filesystem": "4.0.x",
         "symfony/finder": "2.3.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
         "classmap": [
             
