--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/finder": "2.3.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "mockery/mockery": "dev-master@dev"
     },
     "autoload": {
         "classmap": [
