--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     ],
     "require": {
         "php": ">=5.3.7"
+        "illuminate/support": "~4",
+        "illuminate/filesystem": "~4",
+        "symfony/finder": "~2.3",
+        "psr/log": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "0.8.0",
-        "illuminate/support": "4.0.x",
-        "psr/log": "~1.0",
-        "illuminate/filesystem": "4.0.x",
-        "symfony/finder": "2.3.*"
+        "mockery/mockery": "0.8.0"
     },
     "autoload": {
         "classmap": [
