--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ php:
   - 5.5
 
 before_script:
+  - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-script: phpunit
+script:
+  - phpunit
