--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
     ],
     "require": {
         "php": ">=5.3.7",
-        "illuminate/support": "~4",
-        "illuminate/filesystem": "~4",
-        "symfony/finder": "2.3.*|2.4.*",
+        "illuminate/support": "~4.0",
+        "illuminate/filesystem": "~4.0",
+        "symfony/finder": "~2.3",
         "psr/log": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "0.8.0"
+        "phpunit/phpunit": "~4.0",
+        "mockery/mockery": "~0.9"
     },
     "autoload": {
         "classmap": [
@@ -34,6 +34,5 @@
         "psr-0": {
             "Kmd\\Logviewer": "src/"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
